--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,8 +7,12 @@ body {
     font-size: 16px;
     line-height: 1.7;
     color: black;
-    font-family: 'Solway', serif;
+    font-family: 'Raleway', sans-serif;
     margin: 0 auto;
+}
+
+header {
+    background-size: cover;
 }
 
 section {
@@ -17,6 +21,10 @@ section {
 
 h3 {
     margin-top: 80px;
+}
+
+h2 {
+    text-shadow: 2px 2px 5px grey;
 }
 
 .row {
@@ -55,7 +63,7 @@ h3 {
     display: inline-block;
     float: right;
     padding: 10px;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 
 .header {
@@ -77,6 +85,7 @@ h3 {
 h1 {
     margin-bottom: 50px;
     font-size: 58px;
+    text-shadow: 5px 5px 5px grey;
 }
 
 /* section services */
@@ -114,6 +123,10 @@ h1 {
     padding-top: 5px;
 }
 
+.text:hover {
+    cursor: pointer;
+}
+
 /* our portfolio */
 
 .cart-image {
@@ -125,6 +138,11 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.cart-image img:hover {
+    opacity: 0.6;
+    transition: 1s;
 }
 
 .section-our-portfolio {
@@ -156,5 +174,11 @@ h1 {
 }
 
 .footer p {
-    float: left;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.col-lg-6 ul {
+    text-align: center;
+    margin-right: 30px;
 }
