--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,11 +47,15 @@ h2 {
     font-family: 'Satisfy', cursive;
     font-size: 68px;
     text-decoration: none;
+    display:block;
+    text-align:center;
 }
 
 .navigation ul {
     margin-top: 30px;
     list-style-type: none;
+    text-align: center;
+    padding: 0;
 }
 
 .navigation ul li a {
@@ -64,6 +68,7 @@ h2 {
     float: right;
     padding: 10px;
     margin-right: 10px;
+    float: none;
 }
 
 .header {
